fix: spacing between zoom in and zoom out button MapDialog, set dark mode preview url in env in vercel environments, outlining issues mobile MapDialog

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,7 +114,9 @@
   position: absolute;
   right: 1em;
   bottom: 1em;
-  gap: 0 !important;
+  gap: 0.5rem !important;
+  display: flex;
+  flex-direction: column;
 }
 
 .map-alert-dialog__content {
